[gd_scene load_steps=7 format=3 uid="uid://dschrq2gvbkh4"]

[ext_resource type="Script" uid="uid://dv5on818cpu6g" path="res://source/menus/editors/chart_editor/chartState.gd" id="1_0k01q"]
[ext_resource type="Texture2D" uid="uid://bx5opmuyd8cpm" path="res://assets/images/chart_BG.png" id="2_x2y11"]
[ext_resource type="Script" uid="uid://tlkodrv0ql5t" path="res://source/menus/editors/chart_editor/grid.gd" id="3_nvrt8"]
[ext_resource type="FontFile" uid="uid://d1v51eqb2c10v" path="res://assets/fonts/vcr.ttf" id="4_5274j"]
[ext_resource type="Texture2D" uid="uid://djc31ia0m7ye4" path="res://assets/stages/week1/soaked.png" id="4_i5mb3"]

[sub_resource type="LabelSettings" id="LabelSettings_ko37q"]
font = ExtResource("4_5274j")
font_size = 545
shadow_size = 80
shadow_color = Color(0, 0, 0, 1)

[node name="ChartState" type="Node2D"]
script = ExtResource("1_0k01q")

[node name="bg" type="Sprite2D" parent="."]
modulate = Color(0.5, 0.371666, 0.494867, 1)
texture_filter = 1
position = Vector2(640, 360)
texture = ExtResource("2_x2y11")

[node name="soaked" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.113725)
position = Vector2(1044, 310)
texture = ExtResource("4_i5mb3")

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(303, 180)

[node name="grid_objs" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="grid" type="Node2D" parent="grid_objs"]
position = Vector2(360, 80)
script = ExtResource("3_nvrt8")

[node name="selection_box" type="ColorRect" parent="grid_objs"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="song_line" type="ColorRect" parent="grid_objs"]
layout_mode = 0
offset_left = 360.0
offset_top = 88.0
offset_right = 400.0
offset_bottom = 128.0
scale = Vector2(8.00678, 0.190438)

[node name="note_sustain" type="ColorRect" parent="grid_objs"]
visible = false
layout_mode = 0
offset_right = 10.0
offset_bottom = 10.0

[node name="sustain_notes" type="Node2D" parent="grid_objs"]

[node name="notes" type="Node2D" parent="grid_objs"]

[node name="black_grid" type="ColorRect" parent="grid_objs"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.458824)

[node name="icons" type="Node2D" parent="grid_objs"]

[node name="icon_player" type="Sprite2D" parent="grid_objs/icons"]
position = Vector2(620, 50)
scale = Vector2(0.398, 0.398)
flip_h = true

[node name="icon_opponent" type="Sprite2D" parent="grid_objs/icons"]
position = Vector2(435, 50)
scale = Vector2(0.398, 0.365)

[node name="chart_UI" type="CanvasLayer" parent="."]
layer = 3

[node name="chart_objs" type="Control" parent="chart_UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = -126.0
offset_right = 80.0
offset_bottom = -86.0

[node name="TabContainer" type="TabContainer" parent="chart_UI/chart_objs"]
visibility_layer = 524289
layout_mode = 0
offset_left = 798.0
offset_top = 175.0
offset_right = 1164.0
offset_bottom = 677.0
tab_alignment = 1
current_tab = 2
all_tabs_in_front = true

[node name="chart" type="TabBar" parent="chart_UI/chart_objs/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Bpm" type="SpinBox" parent="chart_UI/chart_objs/TabContainer/chart"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 31.0
offset_right = 83.0625
offset_bottom = 62.0
max_value = 1000.0

[node name="bpm_text" type="Label" parent="chart_UI/chart_objs/TabContainer/chart"]
layout_mode = 0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 31.0
text = "bpm:"

[node name="song_speed" type="SpinBox" parent="chart_UI/chart_objs/TabContainer/chart"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 102.0
offset_right = 83.063
offset_bottom = 133.0
max_value = 10.0
step = 0.1

[node name="song_speed_text" type="Label" parent="chart_UI/chart_objs/TabContainer/chart"]
layout_mode = 0
offset_top = 79.0
offset_right = 92.0
offset_bottom = 102.0
text = "song speed:"

[node name="section" type="TabBar" parent="chart_UI/chart_objs/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="must_hit" type="CheckBox" parent="chart_UI/chart_objs/TabContainer/section"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 40.0
offset_right = 160.0
offset_bottom = 71.0
button_pressed = true
text = "must hit section?"

[node name="gf_section" type="CheckBox" parent="chart_UI/chart_objs/TabContainer/section"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 102.0
offset_right = 160.0
offset_bottom = 133.0
text = "gf section?"

[node name="alt_section" type="CheckBox" parent="chart_UI/chart_objs/TabContainer/section"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 71.0
offset_right = 160.0
offset_bottom = 102.0
text = "alt anim?"

[node name="new_bpm" type="SpinBox" parent="chart_UI/chart_objs/TabContainer/section"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 139.0
offset_top = 133.0
offset_right = 222.063
offset_bottom = 164.0
max_value = 5000.0

[node name="bpm_change" type="CheckBox" parent="chart_UI/chart_objs/TabContainer/section"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 133.0
offset_right = 139.0
offset_bottom = 164.0
text = "bpm changes?"

[node name="section_step" type="SpinBox" parent="chart_UI/chart_objs/TabContainer/section"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 8.0
offset_right = 88.0625
offset_bottom = 39.0
max_value = 50.0
value = 16.0

[node name="copy_section" type="Button" parent="chart_UI/chart_objs/TabContainer/section"]
layout_mode = 0
offset_left = 5.0
offset_top = 183.0
offset_right = 116.0
offset_bottom = 214.0
text = "copy section"

[node name="paste_section" type="Button" parent="chart_UI/chart_objs/TabContainer/section"]
layout_mode = 0
offset_left = 5.0
offset_top = 222.0
offset_right = 116.0
offset_bottom = 253.0
text = "paste section"

[node name="note" type="TabBar" parent="chart_UI/chart_objs/TabContainer"]
layout_mode = 2
metadata/_tab_index = 2

[node name="note_sustain_lenght" type="SpinBox" parent="chart_UI/chart_objs/TabContainer/note"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 40.0
offset_right = 114.0
offset_bottom = 71.0
max_value = 5000.0
step = 41.0

[node name="note_sustain_lenght_text" type="Label" parent="chart_UI/chart_objs/TabContainer/note"]
layout_mode = 0
offset_top = 16.0
offset_right = 95.0
offset_bottom = 39.0
text = "note lenght:"

[node name="note_type_text" type="Label" parent="chart_UI/chart_objs/TabContainer/note"]
layout_mode = 0
offset_top = 86.0
offset_right = 95.0
offset_bottom = 109.0
text = "note type:"

[node name="note_type" type="OptionButton" parent="chart_UI/chart_objs/TabContainer/note"]
layout_mode = 0
offset_top = 109.0
offset_right = 114.0
offset_bottom = 140.0

[node name="song" type="TabBar" parent="chart_UI/chart_objs/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="song_name" type="LineEdit" parent="chart_UI/chart_objs/TabContainer/song"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 40.0
offset_right = 162.0
offset_bottom = 71.0

[node name="song_name_text" type="Label" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_top = 16.0
offset_right = 42.0
offset_bottom = 39.0
text = "song:"

[node name="is_pixel_stage" type="CheckBox" parent="chart_UI/chart_objs/TabContainer/song"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 110.0
offset_right = 135.0
offset_bottom = 141.0
text = "is pixel stage?"

[node name="have_voice_track" type="CheckBox" parent="chart_UI/chart_objs/TabContainer/song"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 79.0
offset_right = 24.0
offset_bottom = 103.0
button_pressed = true
text = "have voices?"

[node name="load_json" type="Button" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_left = 244.0
offset_top = 31.0
offset_right = 338.0
offset_bottom = 62.0
text = "load json"

[node name="save_json" type="Button" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_left = 244.0
offset_top = 71.0
offset_right = 338.0
offset_bottom = 102.0
text = "save json"

[node name="player1" type="OptionButton" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_top = 208.0
offset_right = 139.0
offset_bottom = 230.0

[node name="player1_text" type="Label" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_top = 184.0
offset_right = 67.0
offset_bottom = 207.0
text = "player 1:"

[node name="player2" type="OptionButton" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_top = 271.0
offset_right = 139.0
offset_bottom = 293.0

[node name="player2_text" type="Label" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_top = 248.0
offset_right = 67.0
offset_bottom = 271.0
text = "player 2:"

[node name="player3" type="OptionButton" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_left = 214.0
offset_top = 206.0
offset_right = 353.0
offset_bottom = 228.0
disabled = true

[node name="player3_text" type="Label" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_left = 214.0
offset_top = 183.0
offset_right = 281.0
offset_bottom = 206.0
text = "player 3:"

[node name="gf" type="OptionButton" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_top = 329.0
offset_right = 139.0
offset_bottom = 351.0

[node name="gf_text" type="Label" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_top = 306.0
offset_right = 67.0
offset_bottom = 329.0
text = "Gf:"

[node name="stage" type="OptionButton" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_top = 393.0
offset_right = 139.0
offset_bottom = 415.0

[node name="stage_text" type="Label" parent="chart_UI/chart_objs/TabContainer/song"]
layout_mode = 0
offset_top = 369.0
offset_right = 67.0
offset_bottom = 392.0
text = "stage:"

[node name="new_opponent" type="CheckBox" parent="chart_UI/chart_objs/TabContainer/song"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 141.0
offset_right = 126.0
offset_bottom = 172.0
text = "two opponents?"

[node name="chart_info" type="Label" parent="chart_UI/chart_objs"]
layout_mode = 0
offset_left = 798.0
offset_top = 677.0
offset_right = 5269.0
offset_bottom = 2602.0
scale = Vector2(0.05, 0.05)
text = "section:
curBeat:
curStep:
song position:"
label_settings = SubResource("LabelSettings_ko37q")

[node name="chart_inst" type="AudioStreamPlayer" parent="."]

[node name="chart_voices" type="AudioStreamPlayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[connection signal="file_selected" from="FileDialog" to="." method="save_json"]
[connection signal="pressed" from="chart_UI/chart_objs/TabContainer/section/must_hit" to="." method="_on_must_hit_pressed"]
[connection signal="pressed" from="chart_UI/chart_objs/TabContainer/section/gf_section" to="." method="_on_gf_section_pressed"]
[connection signal="pressed" from="chart_UI/chart_objs/TabContainer/section/alt_section" to="." method="_on_alt_section_pressed"]
[connection signal="value_changed" from="chart_UI/chart_objs/TabContainer/section/new_bpm" to="." method="_on_new_bpm_value_changed"]
[connection signal="pressed" from="chart_UI/chart_objs/TabContainer/section/bpm_change" to="." method="_on_bpm_change_pressed"]
[connection signal="value_changed" from="chart_UI/chart_objs/TabContainer/section/section_step" to="." method="_on_section_step_value_changed"]
[connection signal="pressed" from="chart_UI/chart_objs/TabContainer/section/copy_section" to="." method="copy_section"]
[connection signal="pressed" from="chart_UI/chart_objs/TabContainer/section/paste_section" to="." method="paste_section"]
[connection signal="pressed" from="chart_UI/chart_objs/TabContainer/song/load_json" to="." method="load_song_json"]
[connection signal="pressed" from="chart_UI/chart_objs/TabContainer/song/save_json" to="." method="save_file"]
